more featured on, fix for whitespace on right margin mobile

--- a/gallery/default-skin/default-skin.css
+++ b/gallery/default-skin/default-skin.css
@@ -467,4 +467,4 @@ a.pswp__share--download:hover {
   display: none !important; }
 
 .pswp--minimal--dark .pswp__top-bar {
-  background: none; }n
+  background: none; }
